terraform/minikube/modules/jaeger/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-jaeger-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 4318
      name: jaeger-collector
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 16686
      name: jaeger-query
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-jaeger-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-jaeger-gateway
  tcp:
  - match:
    - port: 4318
    route:
    - destination:
        host: reactory-jaeger
        port:
          number: 4318
  - match:
    - port: 16686
    route:
    - destination:
        host: reactory-jaeger
        port:
          number: 16686
